@@ -311,7 +311,7 @@
 -wordwrap
 
  News/mail files.
-*.article
+*.article*
 -wordwrap
 -syntax mail
 
