@@ -348,7 +348,7 @@
 
  News/mail files.
 *.article*
-*.article
+-wordwrap
 -syntax mail
 
 *.followup
