@@ -337,7 +337,7 @@
 -wordwrap
 
  News/mail files.
-*.article
+*.article*
 -wordwrap
 -syntax mail
 
